# claude-memory-mcp

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COVERAGE.md  COVERAGE_ANALYSIS.md  IMPORT_GUIDE.md  README.md  RESEARCH_PHASE_0.md  analyze_json.py  bulk_import.py  bulk_import_enhanced.py  main.py  mcp-server.sh  pyproject.toml  pytest.ini  run_server.sh  run_server_absolute.sh  server_fastmcp.py  setup.sh  simple_bulk_import.py  simple_import.py  sonar-project.properties  standalone_test.py  test-integration.md  todos.md  troubleshoot.sh
.claude/: settings.local.json
.claude/commands/: StartOfTheDay.md  WrapUpForTheDay.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  claude.yml  codeql.yml  performance.yml
.scannerwork/: report-task.txt
None/conversations/: index.json  topics.json
None/data/conversations/: index.json  topics.json
archive/: git_artifact  requirements.txt  run_server.sh  server.py
claude_memory_test_7ky188xm/data/conversations/: search.db  search.db-journal
config/: pytest.ini  sonar-project.properties
data/: projects.json
data/config/: Makefile  pyproject.toml  pytest.ini
data/conversations/: index.json  search.db  topics.json
docs/: COVERAGE.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  COVERAGE_ANALYSIS.md  GIT_COMMIT_GUIDE.md  IMPORT_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PROOF_OF_CONCEPT_CHATGPT.md  PR_WORKFLOW_SUCCESS.md  RESEARCH_PHASE_0.md  SEARCH_OPTIMIZATION_ANALYSIS.md  TESTING.md  VERIFICATION_CHECKLIST.md  ai_platform_formats.md  example-conversation.md  json-logging.md  performance_benchmark_plan.md
docs/features/json-logging-COMPLETED/: status.md
docs/features/json-logging-PLANNED/: prd.md  status.md  tasks.md
docs/tasks/: prompt-functional-tests.md  prompt-integration-tests.md  prompt-library-guide.md  prompt-security-tests.md  prompt-session-charters.md  prompt-session-templates.md  prompt-test-execution-guide.md  prompt-test-strategy.md  session-charters.md  session-templates.md  test-execution-guide.md  test-strategy.md
docs/tasks/structured-tests/: functional-tests.md  integration-tests.md  security-tests.md
scripts/: analyze_chatgpt_structure.py  automate_import.py  benchmark_search.py  bulk_import.py  bulk_import_enhanced.py  cleanup_test_directories.py  demo_validation.py  generate_performance_report.py  generate_test_data.py  import_workflow.sh  mcp-server.sh  parse_conversations.py  prepare_import.py  run_server_absolute.sh  sanitize_chatgpt_export.py  sanitized_chatgpt.json  setup_environment.sh  simple_import.py  troubleshoot.sh
src/: config.py  conversation_memory.py  exceptions.py  format_detector.py  logging_config.py  migrate_to_sqlite.py  path_utils.py  search_benchmarks.py  search_database.py  server_fastmcp.py  validators.py
src/.claude/: settings.local.json
src/exporters/: __init__.py  base_exporter.py  chatgpt_exporter.py  json_exporter.py
src/importers/: __init__.py  base_importer.py  chatgpt_importer.py  claude_importer.py  cursor_importer.py  generic_importer.py
src/schemas/: __init__.py  chatgpt_schema.py
tasks/: prd-conversation-memory-system.md  prompt-functional-tests.md  prompt-security-tests.md  prompt-session-templates.md  session-templates.md
tasks/structured-tests/: functional-tests.md  integration-tests.md
test_add_error_0egjxb1m/data/conversations/: index.json  topics.json
test_add_error_1racibrr/data/conversations/: index.json  topics.json
test_add_error_1rj6pig4/data/conversations/: index.json  topics.json
test_add_error_7cryet7d/data/conversations/: index.json  topics.json
test_add_error_8pbzqsog/data/conversations/: index.json  topics.json
test_add_error_c4sjtvne/data/conversations/: index.json  topics.json
test_add_error_ceqarvvm/data/conversations/: index.json  topics.json
test_add_error_g7oa19ne/data/conversations/: index.json  topics.json
test_add_error_gful4shb/data/conversations/: index.json  topics.json
test_add_error_l2f70ehe/data/conversations/: index.json  topics.json
test_add_error_nnl78js4/data/conversations/: index.json  topics.json
test_add_error_p7qmgtdb/data/conversations/: index.json  topics.json
test_add_error_x69b57x6/data/conversations/: index.json  topics.json
test_add_error_ygtlzka9/data/conversations/: index.json  topics.json
test_additional_error_0r569e_y/data/conversations/: index.json  topics.json
test_additional_error_20w4chah/data/conversations/: index.json  topics.json
tests/: analyze_json.py  standalone_test.py  test_100_percent_coverage.py  test_add_conversation_rollback.py  test_base_importer_batch_error_handling.py  test_bulk_import_enhanced.py  test_chatgpt_schema_validation_boundary.py  test_claude_importer_error_handling.py  test_config.py  test_conversation_memory_rollback_logging.py  test_conversation_memory_sqlite_fallback.py  test_correlation_id.py  test_cursor_importer_error_handling.py  test_direct_coverage.py  test_fastmcp_coverage.py  test_fastmcp_metadata_validation.py  test_final_100_percent_coverage.py  test_final_2_lines.py  test_format_detector.py  test_format_detector_error_handling.py  test_importerror_coverage.py  test_input_validation.py  test_json_exception_coverage.py  test_json_formatter_ultimate_fallback.py  test_json_logging.py  test_log_sampling.py  test_logging.py  test_logging_exception_coverage.py  test_logging_path_exception_coverage.py  test_logging_security.py  test_logging_wiring.py  test_memory_server.py  test_metadata_validation.py  test_migrate_to_sqlite_error_handling.py  test_path_utils.py  test_performance_benchmarks.py  test_search_database_error_handling.py  test_server.py  test_server_exception_coverage.py  test_sqlite_search.py  (+3 more)
tests/data/chatgpt/: malformed_export.json  (+1 more)
tests/test_exporters/: __init__.py  test_base_exporter.py  test_chatgpt_exporter.py  test_json_exporter.py
tests/test_importers/: __init__.py  test_base_importer.py  test_chatgpt_importer.py  test_claude_importer.py  test_cursor_importer.py  test_generic_importer.py  test_import_integration.py
tests/test_schemas/: test_chatgpt_schema.py
(+81 files in other folders)
