[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for searchable local storage of Claude conversation history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "jsonschema>=4.26.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "psutil>=5.9",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Minimal mypy config: tests import ``src.importers.X`` (via the project
# root being on ``sys.path``) so we anchor mypy at the repo root. Without
# ``explicit_package_bases`` mypy refuses to type-check ``src/`` and
# ``tests/`` in the same invocation — the pre-commit hook does that every
# time both buckets change in a single commit.
[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^(build|dist|htmlcov|\\.scannerwork)/"
