[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for searchable local storage of Claude conversation history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.28.1",
    "jsonschema==4.26.0",
    "aiofiles==25.1.0",
]

# Pinned to exact resolved versions (not floors) so `pip install -e .` in CI
# resolves the same dependency graph every run instead of whatever PyPI
# happens to serve that day (SonarCloud githubactions:S8544 -- "Using
# dependencies without locking resolved versions is security-sensitive").
# This is the single source of truth both workflow files install from; bump
# versions here, not by editing .github/workflows/*.yml.
[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    "psutil==7.2.2",
    "types-aiofiles==25.1.0.20260518",
]
# CI-only lint tooling (quick-checks job in build.yml). Not used by
# pre-commit, which already runs ruff instead -- see chore/strict-lint-config
# (#167) for migrating CI to match. Pinned for the same S8544 reason as dev.
lint = [
    "flake8==7.3.0",
    "mypy==1.16.0",
    "black==26.5.1",
    "isort==8.0.1",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Minimal mypy config: tests import ``src.importers.X`` (via the project
# root being on ``sys.path``) so we anchor mypy at the repo root. Without
# ``explicit_package_bases`` mypy refuses to type-check ``src/`` and
# ``tests/`` in the same invocation — the pre-commit hook does that every
# time both buckets change in a single commit.
[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^(build|dist|htmlcov|\\.scannerwork)/"
