[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for searchable local storage of Claude conversation history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.28.1",
    "jsonschema==4.26.0",
    "aiofiles==25.1.0",
]

# Pinned to exact versions (not floors) as a floor of defense for anyone who
# installs with plain `pip install -e .` outside CI, bypassing the lockfile.
# CI itself installs from `uv.lock` (`uv sync --locked`), which is the actual
# source of truth for the full resolved dependency graph, including
# transitive deps these direct-dep pins can't cover (SonarCloud
# githubactions:S8544 -- "Using dependencies without locking resolved
# versions is security-sensitive"). Bump a version here, then run `uv lock`
# to update uv.lock to match -- CI enforces the two stay in sync.
[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    "psutil==7.2.2",
    "types-aiofiles==25.1.0.20260518",
]
# CI-only lint tooling (quick-checks job in build.yml). Ruff is now the single
# owner of lint/format/import-sorting, matching pre-commit -- CI used to run a
# second, conflicting toolchain (black/isort/flake8) against the same files,
# which is how an isort pass silently relocated a `# type: ignore` comment and
# broke a mypy fix (#156). Pinned for the same S8544 reason as dev.
lint = [
    "ruff==0.15.22",
    "mypy==2.3.0",
    # mypy needs the same stubs the pre-commit hook installs, or the CI type
    # check fails on `Library stubs not installed for "aiofiles"` even though
    # it passes in a dev venv that happens to have them via the dev extra.
    "types-aiofiles==25.1.0.20260518",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"  # matches requires-python floor above; CI runs 3.14

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (ruff is now the single owner of import sorting; see below)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "BLE", # flake8-blind-except
    "PT011",  # pytest.raises too broad — require match= or a specific exception
    "PT012",  # pytest.raises block must be a single simple statement
    "PLE",    # pylint errors only — bad format args, duplicate keys, real bugs
    "LOG",    # flake8-logging — logging API footguns
    "FLY",    # static str.join that should be an f-string
    "PIE",    # flake8-pie — misc footguns (chained startswith, dead pass)
    "A",      # flake8-builtins — shadowing builtins
    "PGH",    # pygrep-hooks — blanket type:ignore / noqa
    "TRY004", # raise TypeError (not ValueError) for type checks
    "TRY400", # use logging.exception (keeps traceback), not logging.error, in except
    "RUF012", # mutable class attribute defaults (shared-state footgun)
]

lint.ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # function calls in argument defaults
    "B905",  # zip without explicit strict parameter
]

exclude = [
    ".git",
    ".venv",
    "claude-memory-mcp-venv",
    "__pycache__",
    "build",
    "dist",
    "data",
    "scripts",  # operational one-offs, out of quality scope (mirrors sonar.exclusions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are the point of an __init__.py
"tests/**/*.py" = ["ARG001", "ARG002", "RUF012"]  # unused fixture args; ClassVar noise on test fixture classes

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Minimal mypy config: tests import ``src.importers.X`` (via the project
# root being on ``sys.path``) so we anchor mypy at the repo root. Without
# ``explicit_package_bases`` mypy refuses to type-check ``src/`` and
# ``tests/`` in the same invocation — the pre-commit hook does that every
# time both buckets change in a single commit.
[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^(build|dist|htmlcov|\\.scannerwork)/"
