[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for searchable local storage of Claude conversation history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.2",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
